tests/snapshots/docx/apache-tika/testDOCX_Thumbnail.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "This file contains a thumbnail" }
       3: EndParagraph
       4: EndDocument
  ],
  terminal: Ok,
}
