tests/snapshots/docx/apache-tika/testFrameset.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Document with frameset" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
