tests/snapshots/docx/apache-tika/testPDFEmbeddingAndEmbedded.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Outer_haystack" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Outer_haystack" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Outer_haystack" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Outer_haystack" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Outer_haystack" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
