tests/snapshots/docx/apache-tika/testWORD.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 1 },
    Text { content: "Sample Word Document Title" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "And now for a subtitle" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Main Heading" },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "Heading Level 1" },
    EndHeading,
    StartHeading { id: None, level: 2 },
    Text { content: "Heading Level 2" },
    EndHeading,
    StartHeading { id: None, level: 3 },
    Text { content: "Heading Level 3" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a sample Microsoft Word Document." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This document includes text that is " },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "BOLD" },
    EndTextStyle,
    Text { content: " and " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "ITALIC" },
    EndTextStyle,
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a table" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Nested table" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "More of our" },
    Text { content: " nested table" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "The table has things in it" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Apache Tika: " },
    StartLink { href: "http://tika.apache.org/", id: None, title: None },
    Text { content: "http://tika.apache.org/" },
    EndLink,
    Text { content: " " },
    StartLink { href: "http://tika.apache.org/", id: None, title: None },
    Text { content: "Tika" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Apache POI: " },
    StartLink { href: "http://poi.apache.org/", id: None, title: None },
    Text { content: "http://poi.apache.org/" },
    EndLink,
    Text { content: " " },
    StartLink { href: "http://poi.apache.org/", id: None, title: None },
    Text { content: "POI" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This paragraph is in the default text style" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This one is in a different one, the Signature style" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is back to the default again" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This links to " },
    StartLink { href: "#OnMainHeading", id: None, title: None },
    Text { content: "The Main Heading Bookmark" },
    EndLink,
    Text { content: " and " },
    StartLink { href: "#OnLevel3", id: None, title: None },
    Text { content: "The Level 3 Bookmark" },
    EndLink,
    Text { content: ". That’s it!" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
